--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     name: Builds UEFI:NTFS multiboot with MinGW for ${{ matrix.arch }}
     strategy:
       matrix:
