--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
     name: Builds UEFI:NTFS multiboot with MinGW for ${{ matrix.arch }}
     strategy:
       matrix:
-        arch: ['x64', 'ia32']
+        arch: ['x64']
     steps:
       - name: Set up MinGW
         uses: egor-tensin/setup-mingw@v2
@@ -21,4 +21,4 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v2
       - name: Run make
-        run: make TARGET=${{ matrix.arch }}  
+        run: make TARGET=${{ matrix.arch }}
